# fingerboard

./: .headache.dirs  .ocamlformat  CHANGELOG.md  CHANGES.md  COPYING.HEADER  LICENSE  Makefile  NOTICE.md  README.md  cemper.opam  dune-project  dunolint  fingerboard-dev.opam  fingerboard-system.opam  fingerboard-tests.opam  fingerboard.opam  headache.sh  index.html
.github/workflows/: ci.yml  deploy-odoc.yml  more-ci.yml
cemper/: index.html
cemper/Cemper/: index.html
cemper/Cemper/Acoustic_interval/: index.html
cemper/Cemper/Acoustic_interval/Symbolic/: index.html
cemper/Cemper/Cello/: index.html
cemper/Cemper/Cello/Fingerboard_position_name/: index.html
cemper/Cemper/Cello/Fingerboard_position_name/Edo12/: index.html
cemper/Cemper/Cello/Fingerboard_position_name/Edo53/: index.html
cemper/Cemper/Cello/Fingerboard_position_name/Just/: index.html
cemper/Cemper/Cello/Fingerboard_position_name/Pythagorean/: index.html
cemper/Cemper/Characterised_interval/: index.html
cemper/Cemper/Characterized_interval/: index.html
cemper/Cemper/Characterized_scale/: index.html
cemper/Cemper/Fingerboard_location/: index.html
cemper/Cemper/Fingerboard_position/: index.html
cemper/Cemper/Frequency/: index.html
cemper/Cemper/Interval/: index.html
cemper/Cemper/Interval/Number/: index.html
cemper/Cemper/Interval/Quality/: index.html
cemper/Cemper/Located_note/: index.html
cemper/Cemper/Located_note/Abbrev/: index.html
cemper/Cemper/Located_note/Scale_abbrev/: index.html
cemper/Cemper/Natural_ratio/: index.html
cemper/Cemper/Natural_ratio/Reduced/: index.html
cemper/Cemper/Note/: index.html
cemper/Cemper/Note/Letter_name/: index.html
cemper/Cemper/Note/Symbol/: index.html
cemper/Cemper/Roman_numeral/: index.html
cemper/Cemper/Scale/: index.html
cemper/Cemper/System/: index.html
doc/: history.md  motivations.md  roadmap.md
fingerboard/: db.js  index.html
fingerboard/Fingerboard/: index.html
fingerboard/Fingerboard/Acoustic_interval/: index.html
fingerboard/Fingerboard/Cello/: index.html
fingerboard/Fingerboard/Cello/Fingerboard_position_name/: index.html
fingerboard/Fingerboard/Cents/: index.html
fingerboard/Fingerboard/Characterized_interval/: index.html
fingerboard/Fingerboard/Characterized_scale/: index.html
fingerboard/Fingerboard/Double_stop/: index.html
fingerboard/Fingerboard/Fingerboard_location/: index.html
fingerboard/Fingerboard/Fingerboard_position/: index.html
fingerboard/Fingerboard/Frequency/: index.html
fingerboard/Fingerboard/Interval/: index.html
fingerboard/Fingerboard/Interval/Number/: index.html
fingerboard/Fingerboard/Interval/Quality/: index.html
fingerboard/Fingerboard/Located_note/: index.html
fingerboard/Fingerboard/Located_note/Abbrev/: index.html
fingerboard/Fingerboard/Located_note/Scale_abbrev/: index.html
fingerboard/Fingerboard/Natural_ratio/: index.html
fingerboard/Fingerboard/Natural_ratio/Reduced/: index.html
fingerboard/Fingerboard/Note/: index.html
fingerboard/Fingerboard/Note/Letter_name/: index.html
fingerboard/Fingerboard/Note/Symbol/: index.html
fingerboard/Fingerboard/Roman_numeral/: index.html
fingerboard/Fingerboard/Scale/: index.html
fingerboard/Fingerboard/System/: index.html
fingerboard/Fingerboard/System/Double_stops/: index.html
fingerboard/Fingerboard/Zarlinean_combination/: index.html
src/: acoustic_interval.ml  acoustic_interval.mli  cello.ml  cello.mli  cemper.ml  cemper.mli  cents.ml  cents.mli  characterized_interval.ml  characterized_interval.mli  characterized_scale.ml  characterized_scale.mli  double_stop.ml  double_stop.mli  dune  fingerboard.ml  fingerboard.mli  fingerboard_location.ml  fingerboard_location.mli  fingerboard_position.ml  fingerboard_position.mli  frequency.ml  frequency.mli  interval.ml  interval.mli  located_note.ml  located_note.mli  natural_ratio.ml  natural_ratio.mli  note.ml  note.mli  octave_designation.ml  octave_designation.mli  roman_numeral.ml  roman_numeral.mli  scale.ml  scale.mli  sexp_to_string.ml  sexp_to_string.mli  system.ml  (+5 more)
src/myers/: COPYING.HEADER  dune  merge3.ml  merge3.mli  myers.ml  myers.mli  vendor.json
src/stdlib/: .crs-ignore  LICENSE-MIT  NOTICE.md  array0.ml  array0.mli  bool0.ml  bool0.mli  code_error.ml  code_error0.ml  code_error0.mli  dune  dyn0.ml  dyn0.mli  fingerboard_stdlib.ml  fingerboard_stdlib.mli  float0.ml  float0.mli  int0.ml  int0.mli  list0.ml  list0.mli  myers0.ml  myers0.mli  option0.ml  option0.mli  ordering0.ml  ordering0.mli  stdlib0.ml  stdlib0.mli  string0.ml  string0.mli
systems/cello/: dune  test__fingerboard_position.ml
systems/cello/e12/: double_stops.ml  double_stops.mli  dune  e12.ml  e12.mli  scales.ml  scales.mli  sixths.ml  sixths.mli  thirds.ml  thirds.mli
systems/cello/e19/: dune  e19.ml  scales.ml  sixths.ml  thirds.ml
systems/cello/e31/: dune  e31.ml  e31.mli  scales.ml  scales.mli  sixths.ml  sixths.mli  thirds.ml
systems/cello/e53/: dune  e53.ml  scales.ml  scales.mli  sixths.ml  thirds.ml
systems/cello/e55/: dune  e55.ml  e55.mli  scales.ml  scales.mli  sixths.ml  thirds.ml  thirds.mli
systems/cello/edf/: dune
systems/cello/just/: dune  just.ml  just.mli  scales.ml  scales.mli  sixths.ml  thirds.ml
systems/cello/pythagorean/: dune  pythagorean.ml  pythagorean.mli  scales.ml  scales.mli  sixths.ml  thirds.ml
systems/cello/zarlinean/: dune  zarlinean.ml
systems/edos/: dune  edos.ml
test/: dune  test__acoustic_interval.ml  test__cello_systems.ml  test__cemper.ml  test__fingerboard.ml  test__fingerboard_position.ml  test__interval.ml  test__natural_ratio.ml  test__natural_ratio.mli  test__note.ml  test__roman_numeral.ml  test__scale.ml  test__system.ml  test__zarlinean_combination.ml  test__zarlinean_combination.mli
test/myers/: COPYING.HEADER  dune  test__myers.ml  test__myers.mli
test/stdlib/: COPYING.HEADER  NOTICE.md  dune  test__stdlib.ml  test__stdlib.mli
third-party-license/gazagnaire/ocaml-merge3/: LICENSE
third-party-license/invariant-hq/windtrap/: LICENSE
(+9 files in other folders)
