opam-version: "2.0"
synopsis: "Setting up various temperaments on the cello fingerboard"
description: "Setting up various temperaments on the cello fingerboard"
maintainer: "Mathieu Barbin"
authors: "Mathieu Barbin"
license: "MIT"
homepage: "https://github.com/mbarbin/cemper"
doc: "https://github.com/mbarbin/cemper"
bug-reports: "https://github.com/mbarbin/cemper/issues"
depends: [
  "ocaml" {>= "4.13"}
  "dune" {>= "2.0.0"}
  "core" {>= "v0.15"}
  "core_unix" {>= "v0.15"}
  "ppx_jane" {>= "v0.15"}
  "sexp_diff" {>= "v0.15"}
  "textutils" {>= "v0.15"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/mbarbin/cemper.git"
