opam-version: "2.0"
synopsis: "Studying various temperaments and intervals on the cello fingerboard"
description: "Studying various temperaments and intervals on the cello fingerboard"
maintainer: "Mathieu Barbin"
authors: "Mathieu Barbin"
license: "MIT"
homepage: "https://github.com/mbarbin/fingerboard"
doc: "https://github.com/mbarbin/fingerboard"
bug-reports: "https://github.com/mbarbin/fingerboard/issues"
depends: [
  "ocaml" {>= "5.0"}
  "dune" {>= "3.11"}
  "base" {>= "v0.16" & < "v0.17"}
  "ppx_jane" {>= "v0.16" & < "v0.17"}
  "sexp_diff" {>= "v0.16" & < "v0.17"}
  "stdio" {>= "v0.16" & < "v0.17"}
  "textutils" {>= "v0.16" & < "v0.17"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/mbarbin/fingerboard.git"
