(library
 (name fingerboard)
 (public_name fingerboard)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Fingerboard_stdlib)
 (libraries base fingerboard_stdlib print-table)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps -unused-type-warnings=force ppx_compare ppx_enumerate ppx_hash)))
