(library
 (name fingerboard_test)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Stdio
  -open
  Fingerboard)
 (libraries
  base
  fingerboard
  fingerboard_cello_system_e12
  fingerboard_cello_system_e53
  fingerboard_cello_system_just
  fingerboard_cello_system_pythagorean
  patdiff.expect_test_patdiff
  stdio
  textutils.ascii_table)
 (inline_tests)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -check-doc-comments))
 (preprocess
  (pps
   ppx_compare
   ppx_enumerate
   ppx_expect
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value)))
