(library
 (name fingerboard_test)
 (public_name fingerboard-tests.fingerboard_test)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Expect_test_helpers_base
  -open
  Fingerboard)
 (libraries
  base
  expect_test_helpers_core.expect_test_helpers_base
  fingerboard
  fingerboard_cello_system_e12
  fingerboard_cello_system_e19
  fingerboard_cello_system_e31
  fingerboard_cello_system_e53
  fingerboard_cello_system_e55
  fingerboard_cello_system_just
  fingerboard_cello_system_pythagorean
  patdiff.expect_test_patdiff
  print-table)
 (inline_tests)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -check-doc-comments))
 (preprocess
  (pps
   -unused-type-warnings=force
   ppx_compare
   ppx_enumerate
   ppx_expect
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value)))
