(library
 (name fingerboard_test)
 (public_name fingerboard-tests.fingerboard_test)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Fingerboard
  -open
  Fingerboard_stdlib)
 (libraries
  fingerboard
  fingerboard_cello_system_e12
  fingerboard_cello_system_e19
  fingerboard_cello_system_e31
  fingerboard_cello_system_e53
  fingerboard_cello_system_e55
  fingerboard_cello_system_just
  fingerboard_cello_system_pythagorean
  fingerboard_stdlib
  patdiff.expect_test_patdiff
  print-table)
 (inline_tests)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps ppx_expect)))
