(library
 (name fingerboard_edo_systems)
 (public_name fingerboard-system.edo)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Fingerboard
  -open
  Fingerboard_stdlib)
 (libraries
  fingerboard
  fingerboard_stdlib
  patdiff.expect_test_patdiff
  print-table)
 (inline_tests)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps ppx_expect)))
