(library
 (name fingerboard_cello_system_e12)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Stdio
  -open
  Fingerboard)
 (libraries base fingerboard stdio textutils.ascii_table)
 (inline_tests)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps
   ppx_compare
   ppx_enumerate
   ppx_expect
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value
   ppx_js_style
   -check-doc-comments)))
