(library
 (name fingerboard_cello_system_pythagorean)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-66
  -warn-error
  +a
  -open
  Base
  -open
  Stdio
  -open
  Fingerboard)
 (libraries base fingerboard stdio textutils.ascii_table)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_js_style -check-doc-comments)))
